<?xml version="1.0"?>
<package format="2">
  <name>aruco_ros_cvwrap</name>
  <version>0.0.0</version>
  <description>The aruco_ros_cvwrap package</description>

  <maintainer email="hei.go@mail.utoronto.ca">H S Helson Go</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>camera_info_manager</depend>
  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <exec_depend>message_runtime</exec_depend>
  <export />
</package>
